<?xml version="1.0"?>
<package format="2">
  <name>isaac_moveit</name>
  <version>0.0.0</version>
  <description>The moveit samples package</description>
  
  <maintainer email="isaac-sim@todo.todo">isaac sim</maintainer>
  
  <license>Copyright (c) 2021, NVIDIA CORPORATION. All rights reserved.
    NVIDIA CORPORATION and its licensors retain all intellectual property
    and proprietary rights in and to this software, related documentation
    and any modifications thereto.  Any use, reproduction, disclosure or
    distribution of this software and related documentation without an express
    license agreement from NVIDIA CORPORATION is strictly prohibited.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>panda_moveit_config</exec_depend>

  <export>

  </export>
</package>
